# somepox

./: .gitignore  Cargo.toml  config.yaml  readme.md
src/: api.rs  config.rs  connection.rs  error.rs  executor.rs  issue.rs  lib.rs  logbackend.rs  mail.rs  mailbox.rs  main.rs  message.rs  roles.rs
src/logbackend/: file_logbackend.rs  heap_logbackend.rs  mod.rs  writable_backend.rs
src/roles/: mod.rs  president.rs  proposer.rs  secretary.rs  senator.rs
v1/: Cargo.toml
v1/src/: issue.rs  mail.rs
v1/src/logbackend/: file_logbackend.rs  heap_logbackend.rs
v1/src/roles/: mod.rs  secretary.rs
v2/: Cargo.toml
v2/src/: main.rs  run.rs
