[package]
name = "somepox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
anyhow = "1.0.69"
bytes = "1.4.0"
clap = { version = "4.5.6", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
