[package]
name = "somepox_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.4"
log = "0.4"

actix = "0.13"
actix-rt = "2.2"
actix-web = "4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

futures = "0.3"
sqlite = "0.36.0"
yaml = "0.3.0"
